Add polyBERT fingerprints

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -1236,6 +1236,46 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/chris/psmiles/.venv/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moving 0 files to the new cache system\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n",
+      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: kuelumbus/polyBERT\n",
+      "Downloading: 100%|██████████| 1.44k/1.44k [00:00<00:00, 256kB/s]\n",
+      "Downloading: 100%|██████████| 190/190 [00:00<00:00, 163kB/s]\n",
+      "Downloading: 100%|██████████| 2.88k/2.88k [00:00<00:00, 212kB/s]\n",
+      "Downloading: 100%|██████████| 84.0/84.0 [00:00<00:00, 122B/s]\n",
+      "Downloading: 100%|██████████| 756/756 [00:00<00:00, 30.1kB/s]\n",
+      "Downloading: 100%|██████████| 124/124 [00:00<00:00, 5.77kB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps.fingerprint('polyBERT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from rdkit.Chem.Draw import IPythonConsole\n",
@@ -1248,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1694,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca400>"
+       "<rdkit.Chem.rdchem.RWMol at 0x799950cd64f0>"
       ]
      },
      "metadata": {},
@@ -1989,7 +2029,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca400>"
+       "<rdkit.Chem.rdchem.RWMol at 0x799950cd64f0>"
       ]
      },
      "metadata": {},
@@ -2247,7 +2287,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca400>"
+       "<rdkit.Chem.rdchem.RWMol at 0x799950cd64f0>"
       ]
      },
      "metadata": {},
@@ -2505,7 +2545,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c65cbd0>"
+       "<rdkit.Chem.rdchem.RWMol at 0x799950c69d10>"
       ]
      },
      "metadata": {},
@@ -2766,7 +2806,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c65cbd0>"
+       "<rdkit.Chem.rdchem.RWMol at 0x799950c69d10>"
       ]
      },
      "metadata": {},
@@ -3065,7 +3105,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x7c57706c1b80>"
+       "<rdkit.Chem.rdchem.Mol at 0x799950c6d0a0>"
       ]
      },
      "metadata": {},
@@ -3099,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -3430,7 +3470,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca630>"
+       "<rdkit.Chem.rdchem.RWMol at 0x79995586f9a0>"
       ]
      },
      "metadata": {},
@@ -4165,7 +4205,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca450>"
+       "<rdkit.Chem.rdchem.RWMol at 0x79995586f900>"
       ]
      },
      "metadata": {},
@@ -4902,7 +4942,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7c576c6ca450>"
+       "<rdkit.Chem.rdchem.RWMol at 0x79995586f900>"
       ]
      },
      "metadata": {},
@@ -5510,7 +5550,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x7c576c6de520>"
+       "<rdkit.Chem.rdchem.Mol at 0x799952deb8e0>"
       ]
      },
      "metadata": {},
@@ -5541,14 +5581,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[14:53:02] WARNING: Omitted undefined stereo\n",
+      "[11:32:29] WARNING: Omitted undefined stereo\n",
       "\n"
      ]
     },
@@ -5569,7 +5609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5589,7 +5629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5616,7 +5656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
