--- a/tests/test_book.ipynb
+++ b/tests/test_book.ipynb
@@ -12,6 +12,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -40,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the figure to disk. Default name to PSMILES string.\n",
+    "ps.savefig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +77,7 @@
        "[*]CC([*])c1ccccc1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +232,7 @@
        "[*]C(CCC([*])c1ccccc1)c1ccccc1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +262,7 @@
        "[*]CC(CC([*])c1ccccc1)c1ccccc1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +291,7 @@
        "array([0, 1, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +321,7 @@
        " 'LogEE_A': 0.6054038617594406}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +343,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +521,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +968,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7fef311b5540>"
+       "<rdkit.Chem.rdchem.RWMol at 0x7f0305ffb5e0>"
       ]
      },
      "metadata": {},
@@ -1284,7 +1304,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7fef311b5540>"
+       "<rdkit.Chem.rdchem.RWMol at 0x7f0305ffb5e0>"
       ]
      },
      "metadata": {},
@@ -1543,7 +1563,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7fef311b5540>"
+       "<rdkit.Chem.rdchem.RWMol at 0x7f0305ffb5e0>"
       ]
      },
      "metadata": {},
@@ -1802,7 +1822,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7fef3217f540>"
+       "<rdkit.Chem.rdchem.RWMol at 0x7f0306074180>"
       ]
      },
      "metadata": {},
@@ -2064,7 +2084,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.RWMol at 0x7fef3217f540>"
+       "<rdkit.Chem.rdchem.RWMol at 0x7f0306074180>"
       ]
      },
      "metadata": {},
@@ -2365,7 +2385,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x7fef2418a200>"
+       "<rdkit.Chem.rdchem.Mol at 0x7f0305f022e0>"
       ]
      },
      "metadata": {},
@@ -2408,14 +2428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[06:44:02] WARNING: Omitted undefined stereo\n",
+      "[11:29:08] WARNING: Omitted undefined stereo\n",
       "\n"
      ]
     },
@@ -2425,7 +2445,7 @@
        "'InChI=1S/C8H8At2/c9-6-8(10)7-4-2-1-3-5-7/h1-5,8H,6H2'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2466,7 @@
        "'PYOVDMHONBXEFX-UHFFFAOYSA-N'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2466,7 +2486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2510,7 @@
        "[*]CC(C)(CCO[*])C(=O)Oc1cccc(C)c1C"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2547,7 @@
        "[*]CCOC(C)(C[*])C(=O)Oc1cccc(C)c1C"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2538,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2562,7 +2582,7 @@
        "[*]OCCCC([*])(C)C(=O)Oc1cccc(C)c1C"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2617,7 @@
        "[*]CCOCC([*])(C)C(=O)Oc1cccc(C)c1C"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2623,7 +2643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4 (default, Apr  9 2021, 01:15:05) \n[GCC 5.4.0 20160609]"
+   "version": "3.9.4"
   },
   "orig_nbformat": 3,
   "vscode": {
